# msl-io

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  LICENSE.txt  README.md  README.rst  conftest.py  cspell.json  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml  run-tests.yml  tests.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/api/base/: index.html
dev/api/constants/: index.html
dev/api/freezable/: index.html
dev/api/google/: index.html
dev/api/metadata/: index.html
dev/api/node/: index.html
dev/api/spreadsheets/: index.html
dev/api/tables/: index.html
dev/api/types/: index.html
dev/api/typing/: index.html
dev/api/utils/: index.html
dev/install/: index.html
dev/items/attribute_access/: index.html
dev/items/datasets/: index.html
dev/items/groups/: index.html
dev/items/metadata/: index.html
dev/license/: index.html
dev/readers/: index.html
dev/readers/create/: index.html
dev/release-notes/: index.html
dev/search/: search_index.json
dev/writers/: index.html
dev/writers/create/: index.html
docs/: api_docs.rst  attribute_access.rst  conf.py  dataset.rst  group.rst  index.md  index.rst  install.md  install.rst  license.rst  metadata.rst  new_reader.rst  readers.rst  writers.rst
docs/_api/: msl.io.base.rst  msl.io.base_io.rst  msl.io.constants.rst  msl.io.dataset.rst  msl.io.dataset_logging.rst  msl.io.dictionary.rst  msl.io.google_api.rst  msl.io.group.rst  msl.io.metadata.rst  msl.io.reader.rst  msl.io.readers.detector_responsivity_system.rst  msl.io.readers.excel.rst  msl.io.readers.gsheets.rst  msl.io.readers.hdf5.rst  msl.io.readers.json_.rst  msl.io.readers.rst  msl.io.readers.spreadsheet.rst  msl.io.register.rst  msl.io.root.rst  msl.io.rst  msl.io.tables.rst  msl.io.utils.rst  msl.io.vertex.rst  msl.io.writers.hdf5.rst  msl.io.writers.json_.rst  msl.io.writers.rst
docs/_static/css/: custom.css
docs/api/: base.md  constants.md  freezable.md  google.md  index.md  metadata.md  node.md  spreadsheets.md  tables.md  types.md  typing.md  utils.md
docs/items/: attribute_access.md  datasets.md  groups.md  metadata.md
docs/readers/: create.md  index.md
docs/writers/: create.md  index.md
msl/io/: __init__.py  base.py  base_io.py  constants.py  csv.py  dataset.py  dataset_logging.py  dictionary.py  google_api.py  group.py  metadata.py  reader.py  register.py  root.py  tables.py  txt.py  utils.py  vertex.py
msl/io/readers/: __init__.py  detector_responsivity_system.py  excel.py  gsheets.py  hdf5.py  json.py  json_.py  spreadsheet.py
msl/io/writers/: __init__.py  _py2_json_encoder.py  _py3_json_encoder.py  hdf5.py  json.py  json_.py
src/msl/io/: __about__.py  __init__.py  _types.py  base.py  constants.py  dataset.py  dataset_logging.py  dictionary.py  freezable.py  google_api.py  group.py  metadata.py  node.py  tables.py  types.py  typing.py  utils.py  vertex.py
tests/: create_google_api_tokens.py  dataset_matmul.py  helper.py  test_dataset.py  test_dataset_logging.py  test_drs_light_standards.py  test_excel_reader.py  test_google_api.py  test_google_api_ci_demo.py  test_group.py  test_gsheets_reader.py  test_hdf5.py  test_json.py  test_mapped_drive.py  test_metadata.py  test_ods_reader.py  test_read.py  test_read_table.py  test_reader.py  test_root.py  test_spectrophotometer_trans.py  test_spreadsheet.py  test_utils.py  test_vertex.py  test_writer.py  test_writer_context_manager.py  test_writer_file_like.py
tests/examples/: test_file_for_static_Reader_methods
tests/samples/: Trans_002420.celsius  excel_datatypes.xlsx  hdf5_sample.h5  json_sample.json  lab_environment.ods  lab_environment.xlsx  ods_datatypes.fods  ods_datatypes.ods  repeats.ods  table.csv  table.ods  table.txt  table.xls  table.xlsx  test_file_for_static_Reader_bytes  uñicödé.h5  uñicödé.json
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/api/: index.html
v0.2.0/api/base/: index.html
v0.2.0/api/constants/: index.html
v0.2.0/api/freezable/: index.html
v0.2.0/api/google/: index.html
v0.2.0/api/metadata/: index.html
v0.2.0/api/node/: index.html
v0.2.0/api/spreadsheets/: index.html
v0.2.0/api/tables/: index.html
v0.2.0/api/types/: index.html
v0.2.0/api/utils/: index.html
v0.2.0/install/: index.html
v0.2.0/items/attribute_access/: index.html
v0.2.0/items/datasets/: index.html
v0.2.0/items/groups/: index.html
v0.2.0/items/metadata/: index.html
v0.2.0/license/: index.html
v0.2.0/readers/: index.html
v0.2.0/readers/create/: index.html
v0.2.0/release-notes/: index.html
v0.2.0/search/: search_index.json
v0.2.0/writers/: index.html
v0.2.0/writers/create/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/api/: index.html
v0.3.0/api/base/: index.html
v0.3.0/api/constants/: index.html
v0.3.0/api/freezable/: index.html
v0.3.0/api/google/: index.html
v0.3.0/api/metadata/: index.html
v0.3.0/api/node/: index.html
v0.3.0/api/spreadsheets/: index.html
v0.3.0/api/tables/: index.html
v0.3.0/api/types/: index.html
v0.3.0/api/utils/: index.html
v0.3.0/install/: index.html
v0.3.0/items/attribute_access/: index.html
v0.3.0/items/datasets/: index.html
v0.3.0/items/groups/: index.html
v0.3.0/items/metadata/: index.html
v0.3.0/license/: index.html
v0.3.0/readers/: index.html
v0.3.0/readers/create/: index.html
v0.3.0/release-notes/: index.html
v0.3.0/search/: search_index.json
v0.3.0/writers/: index.html
v0.3.0/writers/create/: index.html
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/api/: index.html
v0.4.0/api/base/: index.html
v0.4.0/api/constants/: index.html
v0.4.0/api/freezable/: index.html
v0.4.0/api/google/: index.html
v0.4.0/api/metadata/: index.html
v0.4.0/api/node/: index.html
v0.4.0/api/spreadsheets/: index.html
v0.4.0/install/: index.html
v0.4.0/license/: index.html
v0.4.0/readers/: index.html
v0.4.0/release-notes/: index.html
v0.4.0/writers/: index.html
(+33 files in other folders)
